@@ -3326,9 +3326,7 @@ operator|.
 name|UNSUPPORTED_MULTIPLE_DISTINCTS
 operator|.
 name|getMsg
-argument_list|(
-name|expr
-argument_list|)
+argument_list|()
 argument_list|)
 throw|;
 block|}
@@ -8411,17 +8409,9 @@ name|HiveParser
 operator|.
 name|TOK_TABLEROWFORMATLINES
 case|:
-name|tblDesc
-operator|.
-name|getProperties
-argument_list|()
-operator|.
-name|setProperty
-argument_list|(
-name|Constants
-operator|.
-name|LINE_DELIM
-argument_list|,
+name|String
+name|lineDelim
+init|=
 name|unescapeSQLString
 argument_list|(
 name|rowChild
@@ -8434,8 +8424,53 @@ operator|.
 name|getText
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|tblDesc
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+name|Constants
+operator|.
+name|LINE_DELIM
+argument_list|,
+name|lineDelim
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|lineDelim
+operator|.
+name|equals
+argument_list|(
+literal|"\n"
+argument_list|)
+operator|&&
+operator|!
+name|lineDelim
+operator|.
+name|equals
+argument_list|(
+literal|"10"
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|LINES_TERMINATED_BY_NON_NEWLINE
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 break|break;
 default|default:
 assert|assert
@@ -35550,6 +35585,38 @@ name|getText
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|lineDelim
+operator|.
+name|equals
+argument_list|(
+literal|"\n"
+argument_list|)
+operator|&&
+operator|!
+name|lineDelim
+operator|.
+name|equals
+argument_list|(
+literal|"10"
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|LINES_TERMINATED_BY_NON_NEWLINE
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 break|break;
 default|default:
 assert|assert
