@@ -1,0 +1,3 @@
+CREATE TABLE mytable (col1 STRING, col2 INT)
+ROW FORMAT DELIMITED
+LINES TERMINATED BY ',';
